// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI qnm <module>] should add dependents information on yarn installed package 1`] = `
"import-from
└── 3.0.0 (import-cwd) (just now)

"
`;

exports[`CLI qnm <module>] should show an indication in case there is a symlink 1`] = `
"test
└── 1.0.0 -> ../../symlink-origin/node_modules/test (devDependencies, npm install test) (just now)

"
`;

exports[`CLI qnm <module>] should show get matches when using the match command 1`] = `
"test
└── 1.0.0 (devDependencies, npm install test) (just now)

"
`;

exports[`CLI qnm <module>] should show the version and dependents info on a single module when called with a string 1`] = `
"test
└── 1.0.0 (devDependencies, npm install test) (just now)

"
`;

exports[`CLI qnm <module>] should work in monorepo and print subpackages modules 1`] = `
"package-foo
└── 1.0.0 (just now)

package-a
└─┬ package-foo
  └── 2.0.0 (just now)

"
`;

exports[`CLI qnm <module>] should work in monorepo with yarn workspaces 1`] = `
"package-foo
└── 1.0.0 (just now)

package-a
└─┬ package-foo
  └── 2.0.0 (just now)

"
`;

exports[`CLI qnm list should --disable-colors 1`] = `
"[4manotherDependency[24m
└── 1.0.0[2m (just now)[22m

[4mdependency1[24m
└── 1.0.0[2m (just now)[22m

[4mdependency2[24m
└── 1.0.0[2m (just now)[22m

[4mdevDependency1[24m
└── 1.0.0[2m (just now)[22m

[4mdevDependency2[24m
└── 1.0.0[2m (just now)[22m

[4mdep-of-dep[24m
├─┬ [90manotherDependency[39m
│ └── 1.0.0[2m (just now)[22m
├─┬ [90mdependency1[39m
│ └── 1.0.0[2m (just now)[22m
├─┬ [90mdependency2[39m
│ └── 1.0.0[2m (just now)[22m
├─┬ [90mdevDependency1[39m
│ └── 1.0.0[2m (just now)[22m
└─┬ [90mdevDependency2[39m
  └── 1.0.0[2m (just now)[22m

[4mdep-of-dep-of-dep[24m
├─┬ [90manotherDependency[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0[2m (just now)[22m
├─┬ [90mdependency1[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0[2m (just now)[22m
├─┬ [90mdependency2[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0[2m (just now)[22m
├─┬ [90mdevDependency1[39m
│ └─┬ [90mdep-of-dep[39m
│   └── 1.0.0[2m (just now)[22m
└─┬ [90mdevDependency2[39m
  └─┬ [90mdep-of-dep[39m
    └── 1.0.0[2m (just now)[22m

"
`;

exports[`CLI qnm list should list a monorepo 1`] = `
"package-bar
└── 1.0.0 (just now)

package-baz
└── 1.0.0 (just now)

package-foo
└── 1.0.0 (just now)

package-a
└─┬ package-foo
  └── 2.0.0 (just now)

package-b
└─┬ package-bar
  └── 3.0.0 (just now)

"
`;

exports[`CLI qnm list should list dependencies in a yarn installed package and show "why" information 1`] = `
"import-cwd
└── 3.0.0 (just now)

import-from
└── 3.0.0 (import-cwd) (just now)

resolve-from
└── 5.0.0 (import-from) (just now)

"
`;

exports[`CLI qnm list should show all modules in node_modules directory 1`] = `
"@scope/test
└── 1.0.0 (just now)

another
└── 1.0.0 (just now)

test
├── 1.0.0 (just now)
└─┬ another
  └── 1.0.0 (just now)

"
`;

exports[`CLI qnm list should show modules mentioned in package.json 1`] = `
"anotherDependency
└── 1.0.0 (just now)

dependency1
└── 1.0.0 (just now)

dependency2
└── 1.0.0 (just now)

devDependency1
└── 1.0.0 (just now)

devDependency2
└── 1.0.0 (just now)

dep-of-dep
├─┬ anotherDependency
│ └── 1.0.0 (just now)
├─┬ dependency1
│ └── 1.0.0 (just now)
├─┬ dependency2
│ └── 1.0.0 (just now)
├─┬ devDependency1
│ └── 1.0.0 (just now)
└─┬ devDependency2
  └── 1.0.0 (just now)

dep-of-dep-of-dep
├─┬ anotherDependency
│ └─┬ dep-of-dep
│   └── 1.0.0 (just now)
├─┬ dependency1
│ └─┬ dep-of-dep
│   └── 1.0.0 (just now)
├─┬ dependency2
│ └─┬ dep-of-dep
│   └── 1.0.0 (just now)
├─┬ devDependency1
│ └─┬ dep-of-dep
│   └── 1.0.0 (just now)
└─┬ devDependency2
  └─┬ dep-of-dep
    └── 1.0.0 (just now)

"
`;

exports[`CLI qnm match should match in monorepo and print subpackages modules 1`] = `
"package-bar
└── 1.0.0 (just now)

package-baz
└── 1.0.0 (just now)

package-foo
└── 1.0.0 (just now)

package-a
└─┬ package-foo
  └── 2.0.0 (just now)

package-b
└─┬ package-bar
  └── 3.0.0 (just now)

"
`;
